fixed issues with mobile social icons not showing

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -770,6 +770,53 @@ header > span {
     background: #6A98F022;
 }
 
+#contact-board .contact-socials {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    left: 3%;
+    bottom: 100px;
+    margin-top: 30px;
+}
+
+#contact-board .contact-socials > div {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(auto, 45px));
+    width: 100%;
+    max-width: 270px;
+    align-items: center;
+    justify-items: center;
+}
+
+#contact-board .contact-socials a {
+    text-decoration: none;
+    color: var(--text-color-dark);
+    margin-top: 15px;
+    transition: color 0.6s, transform 1s;
+    cursor: pointer;
+}
+
+#contact-board .contact-socials a i {
+    font-size: 25px;
+    color: inherit;
+    transition: transform 0.6s;
+}
+
+#contact-board .contact-socials a:hover {
+    color: var(--text-color);
+    transform: scale(1.3);
+}
+
+@media only screen and (max-width: 720px) {
+    #socials {
+        display: none;
+    }
+
+    #contact-board .contact-socials {
+        display: flex;
+    }
+}
+
 
 
 /* FOOTER  */
